--- a/appsettings.json
+++ b/appsettings.json
@@ -13,6 +13,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BusReservationConnectionString": "Server=127.0.0.1;Port=5432;Database=BusReservation;User Id=myUsername;Password=myPassword;Trusted_connection=true"
+    "BusReservationConnectionString": "Server=127.0.0.1;Port=5432;Database=postgres;User Id=postgres;Password=password;"
   }
 }
